UI tweaks: back button, validation, logo, Kit integration, copy updates

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # Cal.com Booking URL
-CAL_BOOKING_URL=https://cal.com/davejeltema/coaching-call
+CAL_BOOKING_URL=https://cal.com/davejeltema/bcp-1
+
+# Kit (ConvertKit) API Integration (Optional)
+KIT_API_KEY=
+KIT_TAG_ID=
 
 # Google Forms Integration (Optional)
 # Get these from your Google Form's HTML source
