--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # Cal.com Booking URL
 CAL_BOOKING_URL=https://cal.com/davejeltema/bcp-1
 
-# Kit (ConvertKit) API Integration (Optional)
+# Kit (ConvertKit) API Integration
+# Tag: "BCP Applicant" (id: 15754298)
 KIT_API_KEY=
-KIT_TAG_ID=
+KIT_TAG_ID=15754298
 
 # Google Forms Integration (Optional)
 # Get these from your Google Form's HTML source
