--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.5",
+    "googleapis": "^171.4.0",
     "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18",
