Add Stripe payment webhook for BCP member notifications
- Webhook listens for checkout.session.completed + payment_intent.succeeded
- Sends notifications to Discord + WhatsApp when payment received
- Auto-tags customer as 'BCP Member' in Kit
- Includes setup docs with Stripe webhook configuration steps

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,20 @@ GOOGLE_FORM_FIELD_INVESTMENT_READY=
 
 # Notification Settings
 NOTIFICATION_EMAIL=hello@boundlesscreator.com
+
+# Stripe Payment Integration
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Kit Tags (for auto-tagging)
+KIT_TAG_QUALIFIED=15773880
+KIT_TAG_UNQUALIFIED=15773881
+KIT_TAG_CALL_BOOKED=15773882
+KIT_TAG_MEMBER=8240961
+
+# Discord Webhooks
+DISCORD_WEBHOOK_DASHBOARD=https://discord.com/api/webhooks/...
+
+# OpenClaw Integration (for WhatsApp notifications)
+OPENCLAW_GATEWAY_URL=https://your-gateway.com
+OPENCLAW_GATEWAY_TOKEN=your-token-here
